--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ a {
 
 .float-left {
 	float:left;
-}
+}bg-light
 
 .container {
 	width: 1140px;
@@ -132,7 +132,7 @@ form {
 .navbar {
 	height: 60px;
 	width: 100%;
-	background-color: #2E8BC0;
+	background-color: #145DA0;
 	position: fixed;
 	top: 0;
 	z-index: 1000;
