--- a/assets/style.css
+++ b/assets/style.css
@@ -99,9 +99,9 @@ form {
 }
 
 .btn-blue {
-	background-color: #2E8BC0;
+	background-color: #0C2D48;
 	color: #fff;
-	border:1px solid #2E8BC0;
+	border:1px solid #0C2D48;
 }
 
 .btn-blue:hover {
